<resources>
    <string name="app_name">BaiduMap</string>
    <string name="app_description">百度地图</string>
    <string name="bd_location_description">百度地图定位SDK</string>
    <string name="btn_location">发起定位获取定位信息</string>
    <string name="bd_map_description">百度地图地图SDk</string>
    <string name="btn_change_map">随机切换地图类型</string>
    <string name="btn_location_map">开启</string>
    <string name="btn_download_map">离线地图</string>
    <string name="btn_close_location_map">关闭定位</string>
    <string name="bd_ovelay_map_description">百度地图的绘制</string>
    <string name="bd_poi">周边检索功能</string>
    <string name="bd_route">线路规划</string>
    <string name="bd_trace">鹰眼轨迹</string>
    <string name="bd_rail">地理围栏</string>
    <string name="bd_navigation">导航</string>
</resources>
