<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.cs_android.baidumap.activity.MapActivity">

    <com.baidu.mapapi.map.TextureMapView
        android:id="@+id/texture_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.baidu.mapapi.map.TextureMapView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_change_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="onclick"
            android:text="@string/btn_change_map"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_location_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="onclick"
                android:text="@string/btn_location_map"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/btn_close_location_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="onclick"
                android:text="@string/btn_close_location_map"
                android:textColor="@android:color/black"/>
        </LinearLayout>


        <Button
            android:id="@+id/btn_download_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="onclick"
            android:text="@string/btn_download_map"
            android:textColor="@android:color/black"/>
    </LinearLayout>

</RelativeLayout>
